--- a/app/styles/_flags/are.scss
+++ b/app/styles/_flags/are.scss
@@ -12,8 +12,5 @@
 
   background-image:
                     v-stripe($red, $stripe-width),
-                    h-stripe($green, $stripe-height),
-                    h-stripe($white, $stripe-height, $stripe-height),
-                    h-stripe($black, $stripe-height, 2 * $stripe-height)
-                  ;
+                    three-lines($green, $white, $black);
 };
