--- a/app/styles/_flags/ben.scss
+++ b/app/styles/_flags/ben.scss
@@ -13,6 +13,5 @@
                     // Vertical green stripe
                     v-stripe($green, $stripe-width),
                     // Two horizontal stripes
-                    h-stripe($yellow, $stripe-height),
-                    h-stripe($red, $stripe-height, $stripe-height);
+                    two-lines($yellow, $red);
 };
