--- a/app/styles/_flags/lbr.scss
+++ b/app/styles/_flags/lbr.scss
@@ -7,31 +7,36 @@
   $white: #FFF;
   $red: #d50032;
   $blue: #0c2340;
-  $stripe-height: 10 * $unit;
-  $square-size: 50 * $unit;
+  $stripe-height: $height / 11;
+  $square-size: $stripe-height * 5;
   $star-size: 30 * $unit;
   $star-top: 25 * $unit;
   $star-left: 25 * $unit;
 
 
   background-image: 
-                    // Red and white stripes on the bottom
-                    h-stripe($white, $stripe-height, 5 * $stripe-height),
-                    h-stripe($red,   $stripe-height, 6 * $stripe-height),
-                    h-stripe($white, $stripe-height, 7 * $stripe-height),
-                    h-stripe($red,   $stripe-height, 8 * $stripe-height),
-                    h-stripe($white, $stripe-height, 9 * $stripe-height),
-                    h-stripe($red,   $stripe-height, 10 * $stripe-height),
-                    // Blue stripe
-                    v-stripe($blue,  $square-size),
-                    // Red and white stripes on the left
-                    h-stripe($red,   $stripe-height, 0),
-                    h-stripe($white, $stripe-height, 1 * $stripe-height),
-                    h-stripe($red,   $stripe-height, 2 * $stripe-height),
-                    h-stripe($white, $stripe-height, 3 * $stripe-height),
-                    h-stripe($red,   $stripe-height, 4 * $stripe-height)
-                  ;
+                    // Red and white stripes
+                    lines($red, $stripe-height,
+                          $white, $stripe-height,
+                          $red, $stripe-height,
+                          $white, $stripe-height,
+                          $red, $stripe-height,
+                          $white, $stripe-height,
+                          $red, $stripe-height,
+                          $white, $stripe-height,
+                          $red, $stripe-height,
+                          $white, $stripe-height,
+                          $red, $stripe-height);
   &:before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    background: $blue;
+    width: $square-size;
+    height: $square-size;
+  }
+  &:after {
     @include star($white, $star-size, $star-left, $star-top);
   }
 };
