--- a/app/styles/_flags/pri.scss
+++ b/app/styles/_flags/pri.scss
@@ -7,7 +7,7 @@
   $blue: #012169;
   $white: #FFF;
   $red: #ba0c2f;
-  $stripe-height: 6 * $unit;
+  $stripe-height: 20%;
 
   $triangle: $blue;
   $triangle-hypotenuse: 30 * $unit;
