--- a/app/styles/_flags/wlf.scss
+++ b/app/styles/_flags/wlf.scss
@@ -1,5 +1,6 @@
 // Wallis and Futuna
 // http://www.crwflags.com/fotw/flags/wf.html
+// http://www.vexilla-mundi.com/wallis_and_futuna_flag.html
 @mixin flag-wlf() {
   @include ratio(2 / 3);
   $unit: $height / 180;
@@ -7,26 +8,9 @@
   $white: #FFF;
   $blue: #003057;
 
-  $french-stripe-width: 30 * $unit;
-  $french-stripe-height: 60 * $unit;
-  $french-border: $unit;
-  $canton-width: (3 * $french-stripe-width) + $french-border;
-  $canton-height: $french-stripe-height + $french-border;
-  $horizontal-stripe: $height - $canton-height;
-  $vertical-stripe: $width - $canton-width;
-
-  background-image:
-                    // Red to create the canton
-                    h-stripe($red, $horizontal-stripe, $canton-height),
-                    v-stripe($red, $vertical-stripe, $canton-width),
-                    // White border
-                    h-stripe($white, $french-border, $french-stripe-height),
-                    v-stripe($white, $french-border, (3 * $french-stripe-width)),
-                    // French flag
-                    v-stripe($blue, $french-stripe-width),
-                    v-stripe($white, $french-stripe-width, $french-stripe-width),
-                    v-stripe($red, $french-stripe-width, (2 * $french-stripe-width))
-                  ;
+  $canton-width: 91 * $unit;
+  $canton-height: 61 * $unit;
+  $canton-border: $unit;
 
   $square-size: 60 * $unit;
   $square-left: $width - (120 * $unit);
@@ -38,7 +22,21 @@
   $half-square-stripe-size: $square-stripe-size / 2;
   $square-stripe-distance: $half-hypotenuse - $half-square-stripe-size;
 
+  background-color: $red;
+
   &:before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: $canton-width;
+    height: $canton-height;
+    border-right: $canton-border solid $white;
+    border-bottom: $canton-border solid $white;
+    @include three-columns($blue, $white, $red);
+  }
+
+  &:after {
     @include square($white, $square-size, $square-left, $square-top);
     background-image:
                       stripe($alpha, $red, $square-stripe-size, $square-stripe-distance),
